--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_CONNECTION_URL=mongodb+srv://vnr2022:Pilli0101@cluster0.qukcs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_CONNECTION_URL=mongodb+srv://finaldemo:finaldemo@cluster0.osjxcmw.mongodb.net/
 
 PORT=4000
 
